// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snackbar快照测试 不自动消失 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 eKJIdT sinoui-snackbar sinoui-snackbar--open"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snackbar快照测试 含有操作区域 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 eKJIdT sinoui-snackbar sinoui-snackbar--open"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__action"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Button__ButtonLayout-sc-15sa99-0 epEHqj sinoui-button sinoui-button--raised"
          color="error"
          role="button"
          type="button"
        >
          undo
        </button>
      </div>
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snackbar快照测试 居左显示 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 lmNHQa sinoui-snackbar sinoui-snackbar--open sinoui-snackbar--leading"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snackbar快照测试 操作区域换行显示 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 gJUJNo sinoui-snackbar sinoui-snackbar--open sinoui-snackbar--stacked sinoui-snackbar--leading"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__action"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button Button__ButtonLayout-sc-15sa99-0 epEHqj sinoui-button sinoui-button--raised"
          color="error"
          role="button"
          type="button"
        >
          undo
        </button>
      </div>
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snackbar快照测试 纯文本不显示 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 eKJIdT sinoui-snackbar"
/>
`;

exports[`Snackbar快照测试 纯文本显示 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 eKJIdT sinoui-snackbar sinoui-snackbar--open"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snackbar快照测试 设置自定义时长 1`] = `
<div
  className="Snackbar__SnackbarWrapper-sc-1xagtb1-1 eKJIdT sinoui-snackbar sinoui-snackbar--open"
  open={true}
>
  <div
    className="sinoui-snackbar__surface"
  >
    <div
      className="sinoui-snackbar__label"
    >
      消息条文本
    </div>
    <div
      className="sinoui-snackbar__actions"
    >
      <div
        className="sinoui-snackbar__dismiss"
      >
        <button
          className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button sc-AxjAm hpiscz sinoui-icon-button Snackbar__DismissIconButton-sc-1xagtb1-0 llXVng"
          color="textSecondary"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-AxirZ eBpvqz sinoui-svg-icon"
            data-testid="CloseIcon"
            focusable="false"
            role="presentation"
            size={24}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
